--- a/index.html
+++ b/index.html
@@ -5,27 +5,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Ernährungsplan App</title>
   <script src="https://cdn.tailwindcss.com"></script>
-<style>
-  .no-print {
-      display: block !important;
-  }
-</style>
 <script type="importmap">
 {
   "imports": {
-    "jspdf": "https://aistudiocdn.com/jspdf@^3.0.3",
-    "express": "https://aistudiocdn.com/express@^5.1.0",
-    "html2canvas": "https://aistudiocdn.com/html2canvas@^1.4.1",
-    "url": "https://aistudiocdn.com/url@^0.11.4",
+    "react": "https://aistudiocdn.com/react@^19.2.0",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
+    "react/": "https://aistudiocdn.com/react@^19.2.0/",
+    "jspdf": "https://aistudiocdn.com/jspdf@^3.0.3",
+    "html2canvas": "https://aistudiocdn.com/html2canvas@^1.4.1",
+    "express": "https://aistudiocdn.com/express@^5.1.0",
+    "path": "https://aistudiocdn.com/path@^0.12.7",
+    "url": "https://aistudiocdn.com/url@^0.11.4",
     "dotenv": "https://aistudiocdn.com/dotenv@^17.2.3",
+    "cookie-parser": "https://aistudiocdn.com/cookie-parser@^1.4.7",
     "@google/genai": "https://aistudiocdn.com/@google/genai@^1.28.0",
     "vite": "https://aistudiocdn.com/vite@^7.1.12",
-    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.0",
-    "react/": "https://aistudiocdn.com/react@^19.2.0/",
-    "react": "https://aistudiocdn.com/react@^19.2.0",
-    "path": "https://aistudiocdn.com/path@^0.12.7",
-    "cookie-parser": "https://aistudiocdn.com/cookie-parser@^1.4.7"
+    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.0"
   }
 }
 </script>
