--- a/public/login.html
+++ b/public/login.html
@@ -5,8 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anmeldung - KI Ernährungsplaner</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8080690667651280"
+     crossorigin="anonymous"></script>
 </head>
-<body class="bg-slate-100 flex items-center justify-center h-screen">
+<body class="bg-slate-100 flex flex-col items-center justify-center min-h-screen p-4">
     <div class="w-full max-w-md bg-white rounded-lg shadow-lg p-8 m-4">
         <h1 class="text-2xl font-bold text-center text-slate-800 mb-6">Bitte anmelden</h1>
         <form action="/login" method="POST">
@@ -29,6 +31,20 @@
             </div>
         </form>
     </div>
+    
+    <div class="w-full max-w-md mt-4">
+        <!-- Login Page -->
+        <ins class="adsbygoogle"
+             style="display:block"
+             data-ad-client="ca-pub-8080690667651280"
+             data-ad-slot="7239597318"
+             data-ad-format="auto"
+             data-full-width-responsive="true"></ins>
+        <script>
+             (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
+    </div>
+
     <script>
         document.addEventListener('DOMContentLoaded', () => {
             const urlParams = new URLSearchParams(window.location.search);
