fix: Unregister service worker on load
Force unregistration of any existing Service Workers on page load. This prevents caching issues where a stale Service Worker might intercept static share URLs and serve the React app instead of the intended static share plan file.

Also, implement an auto-repair mechanism within the React app's useEffect to handle scenarios where the React app is loaded on a `/shares/` path due to caching, attempting to unregister the SW and reload if found.

Finally, disable caching for the main `index.html` served by the Node.js server to ensure immediate application of updates, especially related to Service Worker changes.

--- a/index.html
+++ b/index.html
@@ -6,24 +6,27 @@
   <meta name="theme-color" content="#10b981" />
   <title>Ernährungsplan App</title>
   <script>
+    // CRITICAL FIX: Force unregistration of any existing Service Workers IMMEDIATELY.
+    // This prevents caching issues where the React app intercepts static share URLs.
+    if ('serviceWorker' in navigator) {
+      navigator.serviceWorker.getRegistrations().then(function(registrations) {
+        for(let registration of registrations) {
+          console.log('Unregistering Service Worker:', registration);
+          registration.unregister().then(function() {
+            console.log('Service Worker unregistered successfully.');
+          });
+        }
+      }).catch(function(error) {
+          console.log('Service Worker unregistration failed: ', error);
+      });
+    }
+  </script>
+  <script>
     // On page load or when changing themes, best to add inline in `head` to avoid FOUC
     if (localStorage.getItem('theme') === 'dark' || (!('theme' in localStorage) && window.matchMedia('(prefers-color-scheme: dark)').matches)) {
       document.documentElement.classList.add('dark')
     } else {
       document.documentElement.classList.remove('dark')
-    }
-  </script>
-  <script>
-    // CRITICAL FIX: Force unregistration of any existing Service Workers to prevent caching issues with shared plans.
-    if ('serviceWorker' in navigator) {
-      navigator.serviceWorker.getRegistrations().then(function(registrations) {
-        for(let registration of registrations) {
-          console.log('Unregistering Service Worker:', registration);
-          registration.unregister();
-        }
-      }).catch(function(error) {
-          console.log('Service Worker unregistration failed: ', error);
-      });
     }
   </script>
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8080690667651280"
