--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
     "html2canvas": "https://aistudiocdn.com/html2canvas@^1.4.1",
     "vite": "https://aistudiocdn.com/vite@^7.2.2",
     "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.1",
-    "mysql2/": "https://aistudiocdn.com/mysql2@^3.15.3/"
+    "mysql2/": "https://aistudiocdn.com/mysql2@^3.15.3/",
+    "lucide-react": "https://esm.sh/lucide-react@0.475.0"
   }
 }
 </script>
